clean up spacing issue for work graphic

--- a/app/pages/root/index.sass
+++ b/app/pages/root/index.sass
@@ -5,6 +5,7 @@
   @apply absolute pin z-0 h-full w-full
 
 .how
+  @apply pt-20 pb-10
   background-image: linear-gradient(135deg, config('colors.denim-lighter'), config('colors.grey-lightest'))
 
 .about
