--- a/app/pages/root/topics/criterion.sass
+++ b/app/pages/root/topics/criterion.sass
@@ -1,3 +1,7 @@
+.criterion
+  @apply flex mb-5
+  background-color: rgba(255, 255, 255, 0.8)
+  
 .tag
   @apply mr-2
   &:last-child
